# soulbound-social

./: Cargo.toml  README.md  init.fish
.cargo/: config.toml
account/: Cargo.toml
account/src/: lib.rs
scripts/: clean.sh  run_local.sh
soulbound/: Cargo.toml
soulbound/src/: contract.rs  lib.rs  service.rs  state.rs
soulbound/src/tests/: init.rs
soulbound/tests/: init.rs
web/: .eslintrc.cjs  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/src/app/: Base.tsx  CreateAccount.tsx  NewPost.tsx  Post.tsx  Posts.tsx  globals.css  layout.tsx  page.tsx
web/src/components/: LeftPanel.tsx  Menu.tsx  RightPanel.tsx  SidebarLayout.tsx
web/src/components/layout/: LeftPanel.tsx  Menu.tsx  RightPanel.tsx  index.tsx
web/src/components/providers/: GraphQLProvider.tsx  Providers.tsx  StateContext.tsx
web/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  button.tsx  calendar.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx  toast.tsx
web/src/providers/: GraphQLProvider.tsx
