[workspace]
members = ["soulbound", "account"]
resolver = "2"

exclude = [
  "web",
]

[workspace.dependencies]
async-graphql = {version = "5.0.7", default-features = false}
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
getrandom = {version = "0.2.10", features = ["js"]}
linera-sdk = "0.2.0"
linera-views = "0.2.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.93"
thiserror = "1.0.38"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
