[package]
edition = "2021"
name = "account"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
bcs = {workspace = true}
futures = {workspace = true}
linera-sdk = {workspace = true}
linera-views = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
