[package]
edition = "2021"
name = "soulbound"
version = "0.1.0"

[dependencies]
account = {path = "../account"}
async-graphql = {workspace = true}
async-trait = {workspace = true}
bcs = {workspace = true}
futures = {workspace = true}
linera-sdk = {workspace = true}
linera-views = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
linera-sdk = {version = "0.2.0", features = ["test"]}
webassembly-test = "0.1.0"

[[bin]]
name = "soulbound_contract"
path = "src/contract.rs"

[[bin]]
name = "soulbound_service"
path = "src/service.rs"

[features]
test = []
